// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Label Matches snapshot when boolean prop "required" is set to: "false" 1`] = `
<label
  htmlFor="jest-auto-snapshots String Fixture"
  style={
    Object {
      "display": "block",
    }
  }
>
  jest-auto-snapshots String Fixture
   
</label>
`;

exports[`jest-auto-snapshots > Label Matches snapshot when passed all props 1`] = `
<label
  htmlFor="jest-auto-snapshots String Fixture"
  style={
    Object {
      "display": "block",
    }
  }
>
  jest-auto-snapshots String Fixture
   
  <span
    style={
      Object {
        "color": "red",
      }
    }
  >
    *
  </span>
</label>
`;

exports[`jest-auto-snapshots > Label Matches snapshot when passed only required props 1`] = `
<label
  htmlFor="jest-auto-snapshots String Fixture"
  style={
    Object {
      "display": "block",
    }
  }
>
  jest-auto-snapshots String Fixture
   
</label>
`;
